--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+certifi==2018.8.24
+chardet==3.0.4
+defusedxml==0.5.0
 Django==2.0.4
+django-allauth==0.38.0
 django-crispy-forms==1.7.2
 gunicorn==19.9.0
+idna==2.7
+oauthlib==2.1.0
 Pillow==5.1.0
 psycopg2==2.7.5
+python3-openid==3.1.0
 pytz==2018.3
+requests==2.19.1
+requests-oauthlib==1.0.0
+urllib3==1.23
